	- Will check for blocked addresses in outgoing acls. Also ranges.
	- Check configuration tpkg test added. Uses checkconf.
	- checkconf does extra semantic tests. i.e. enable absent features.
	- tcpcount and servercount cannot be negative.
	- updated nsd.conf.5 manpage for @port syntax.
	- changed config parser: allows empty server: part (defaults).
	- made nsd.conf.sample file.

24 Feb 2005: Wouter
	- Added compute_crc in util.h and unit tests for it.
	- in cutest.tpkg the number of unit tests was hardcoded
	  in the tpkg package. Removed the dependency, cutest exit
	  value indicates if any failures happened.
	- Added crc at end of NSD-database format. Unique per db.
	  upped db version to 7 because of this.
	- Tested that crcs are big/little endian correct.
	- Added DIFF file spec
	- updated tpkg213 which compares md5 on a zonefile for new format.
	- added nsd.conf.5 manual page with a draft contents.

22 Feb 2005: nsd-team
   * Miek: Changed over to Cutest testing framework.
   * Miek: fixed typo in netio.h
   * Miek: fix syntax in rbtree.c put functions on multiple lines.
   * Miek: unit test tpkg for cutest.
   * Wouter: fixed ptr bug in rbtree unit test.

17 Feb 2005: Wouter
	- rbtree_delete is added and works. Unit tests are there too.
	- Changed tail recursion in rbtree_delete to while loop.
	- Tagged this version as NSD_3_signalsocket_solution.
	  It is the stable 2_2 branch with cleanups, portable, and
	  signalhandler solution by socket communication redesign.

15 Feb 2005: nsd-team
   * Wouter: Fixed server_child would wait for two kill signals before quit.
   * Miek: don't check for port==0 pkt, just try to send them. 
	Forward Port of 2.3.
   * Wouter: Removed unused, not substituted, @nsdxfer@ from Makefile.in.

14 Feb 2005: Wouter
	- Added unit tests for rbtree. Extensive testing of all functions.
	- Added tpkg unit test.
	- configure tests for CUnit(optional lib for unit tests). Makefile
	  cleanup so it works on non-gmake on freebsd.
